xserver-xorg-input-evdev (1:2.3.1-2) UNRELEASED; urgency=low

  * Build against Xserver 1.7.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 02:03:39 +0200

xserver-xorg-input-evdev (1:2.3.1-1) experimental; urgency=low

  * New upstream release.
    + Finalize the middle button emulation when a read error occurs
      (closes: #550970, #552012)
  * Replace the fdi file with an udev rule.

 -- Julien Cristau <jcristau@debian.org>  Sat, 28 Nov 2009 20:42:52 +0100

xserver-xorg-input-evdev (1:2.2.99.1-1) experimental; urgency=low

  * New upstream snapshot.
  * Bump build-dep on xutils-dev for new xorg-macros.
  * Build against xserver 1.7 RC.
  * Bump Standards-Version to 3.8.3.

 -- Julien Cristau <jcristau@debian.org>  Tue, 29 Sep 2009 21:04:26 +0200

xserver-xorg-input-evdev (1:2.2.5-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Fri, 21 Aug 2009 07:18:07 +0200

xserver-xorg-input-evdev (1:2.2.4-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 06 Aug 2009 07:29:42 +0200

xserver-xorg-input-evdev (1:2.2.3-1) unstable; urgency=low

  * New upstream release.
    + Fix corrupted mouse motion events sending pointer to
      top-left of screen, cloces: #528994.
  * Add README.source, bump Standards-Version to 3.8.2.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 30 Jul 2009 09:14:44 +0200

xserver-xorg-input-evdev (1:2.2.2-1) unstable; urgency=low

  * New upstream release.
  * Add myself to Uploaders.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 30 Apr 2009 08:59:58 +0200

xserver-xorg-input-evdev (1:2.2.1-1) unstable; urgency=low

  * New upstream release.
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 01:16:36 +0100

xserver-xorg-input-evdev (1:2.1.1-1) experimental; urgency=low

  * New upstream release.
  * Update debian/copyright from upstream's COPYING.
  * Build against xserver 1.6 rc1.
