@@ -1,8 +1,9 @@
 xserver-xorg-input-evdev (1:2.3.1-2) UNRELEASED; urgency=low
 
   * Build against Xserver 1.7.
+  * Run udevadm trigger on postinst, and depend on udev [linux-any].
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 02:03:39 +0200
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 08 Dec 2009 13:47:20 +0200
 
 xserver-xorg-input-evdev (1:2.3.1-1) experimental; urgency=low
 
